--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,54 @@
 html {
     background-color: rgb(72, 72, 72);
+    font-size: 62.5%;
+    color: white;
+    box-sizing: border-box;
+}
+
+body{
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+}
+
+.calculator-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 64rem;
+
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 64rem;
+    gap: 1rem;
+}
+
+.display{
+    background-color: rgb(40, 40, 40);
+    width: 64rem;
+    padding: 1rem 2rem;
+    text-align: right;
+    box-sizing: border-box;
+
+}
+
+button {
+    min-width: 15rem;
+    height: 5rem;
+    margin: 0;
+}
+
+.num0 {
+    width: 31.33rem;
 }
