--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,10 @@ body{
     align-items: center;
     gap: 1rem;
     width: 64rem;
-
+    box-sizing: content-box;
+    background-color: rgb(106, 106, 106);
+    padding: 1rem;
+    border-radius: .75rem;
 }
 
 .button-container {
@@ -40,6 +43,7 @@ body{
     padding: 1rem 2rem;
     text-align: right;
     box-sizing: border-box;
+    border-radius: 0.75rem;
 
 }
 
@@ -47,6 +51,19 @@ button {
     min-width: 15rem;
     height: 5rem;
     margin: 0;
+    color: rgb(59, 59, 59);
+    font-size: 2rem;
+    border-radius: 0.75rem;
+
+}
+
+.operator {
+    background-color: coral;
+    font-weight: bolder;
+}
+
+.operand {
+    background-color: aquamarine;
 }
 
 .num0 {
