--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ button {
     min-width: 15rem;
     height: 5rem;
     margin: 0;
-    color: rgb(59, 59, 59);
+    color: rgb(255, 255, 255);
     font-size: 2rem;
     border-radius: 0.75rem;
 
@@ -62,8 +62,12 @@ button {
     font-weight: bolder;
 }
 
+.operations {
+    background-color: rgb(47, 19, 157);
+}
+
 .operand {
-    background-color: aquamarine;
+    background-color: cadetblue;
 }
 
 .num0 {
